--- a/docs/base/javascript/js2_1.md
+++ b/docs/base/javascript/js2_1.md
@@ -9,7 +9,7 @@ function getMonthCountDay1 (year, month) {
 
 ``` js
 // month 值需对应实际的月份，如实际 2 月，month 为 2
-function getMonthCountDay1 (year, month) {
+function getMonthCountDay2 (year, month) {
   return new Date(year, month, 0).getDate()
 }
 ```
@@ -23,6 +23,19 @@ getMonthCountDay1(2020, 2) // 29
 getMonthCountDay2(2020, 2) // 29
 ```
 
+
+
+测试：
+
+<template>
+  <div class="example">
+    getMonthCountDay2(<input class="year" type="text" v-model.number.trim="year" maxlength="5">,
+    <input type="text" class="month" v-model.number.trim="month" maxlength="2">)
+    <p>{{getMonthCountDay2(year, month)}}</p>
+  </div>
+</template>
+
+
 解析：
 
 利用了 Date API 处理日期溢出时，会自动往后推延响应时间的规则：
@@ -32,3 +45,34 @@ getMonthCountDay2(2020, 2) // 29
 - `new Date(2019, -2, 10)`，2019年1月10日往前推2个月，结果为2018年11月10日
 - `new Date(2019, 2, -2)`，2019年3月1日往前推2天，结果为2019年2月26日
 - 以上可以混用
+
+<script>
+export default {
+  data() {
+    return {
+      year: '',
+      month: '',
+    }
+  },
+  methods: {
+    getMonthCountDay2(year, month) {
+      if(year > 0 && month > 0) {
+        return new Date(year, month, 0).getDate()
+      } else {
+        return ''
+      }
+    }
+  }
+}
+</script>
+
+<style>
+  .example {
+    border: 1px solid #3eaf7c;
+    border-radius: 6px;
+    padding: 5px 10px;
+  }
+  input {
+    width: 50px;
+  }
+</style>
