update vuepress to 1.8.2

--- a/docs/base/word-interpretation/a1.md
+++ b/docs/base/word-interpretation/a1.md
@@ -36,11 +36,11 @@
   [a² + a√y,a² + b²]
   ```
   那么从这个用法和现在社区的用法来看，语法糖有这么2个特征：
-  1.运行时等价
+  1、运行时等价
   语法糖的英文是 syntactic sugar ,这个 syctactic 学过编译原理的都知道什么意思，显然它是个语法级别的描述，那么它最为明显的特征，就是不涉及运行时变更。
   比如 coffee 的 ->，它跟 function 完全运行时等价（废话，他就是编译到 function 的啊），所以是语法糖，而 es6 的 => 因为涉及 this 等特殊处理，所以不能算语法糖。
     
-  2.语法结构等价
+  2、语法结构等价
   因为原本作者用法比较简单，估计也没想太多，但是其实语法糖还有一点约束，那就是糖前糖后的语法结构在语法中所处的位置不能变，比如原来是嵌套结构，后来变成顺序结构了，这个就不能说是语法糖看，因为它影响了周围的语法环境约束，比如
   ```
   where(1) {
