--- a/docs/base/word-interpretation/a2.md
+++ b/docs/base/word-interpretation/a2.md
@@ -1,12 +1,15 @@
 # 英文/缩写释义
 
+### One
+
 |a|aa|aaa|
-|:---------:|:-------------:|:-----:|
+|:---------:|:---------|:-----:|
 | oss      | Object Storage Server | 对象存储 |
 | cos      | cloud object storage      | 云对象存储（腾讯） |
 | PaaS     | platform-as-a-service      | 平台即服务 |
 | CI\CD    | 持续集成（Continuous Integration）」、「持续交付（Continuous Delivery）」、「持续部署（Continuous Deployment）」 | 因为「持续交付」和「持续部署」的英文缩写是一样的，所以这三件事情缩写成了 CI\CD |
 
+### Two
 
 - Showing 1 changed file with 1 addition and 0 deletions. 【改了一个文件，添加了一行内容，删除了0行内容。】
 
@@ -27,123 +30,17 @@ REPL(Read Eval Print Loop:交互式解释器) ，类似系统的终端
 - 在github中，其实是有查找功能的，搜索查找快捷键
 
 
-【收藏 - 博客】
-技术博客|个人博客|learning plan
----|---|---
-[腾讯全端 AlloyTeam 团队 Blog](http://www.alloyteam.com/)|[byvoid 网站](https://www.byvoid.com/zhs/blog/list)| -[x] [didi-肖磊](https://github.com/CommanderXL/Biu-blog)
-[好多视频](http://haoduoshipin.com/)|[Layui 作者个人博客](http://sentsin.com/)
-[陈秋歌发布的内容](http://geek.csdn.net/user/publishlist/chenqiuge1984)|[yilia 主题作者 litten 博客](http://litten.me/)
-[dwqs/blog](https://github.com/dwqs/blog)|[阮一峰的个人网站](http://www.ruanyifeng.com/home.html)
-[滴滴团队技术blog](https://github.com/DDFE/DDFE-blog)|[NexT主题作者IIssNan博客](http://notes.iissnan.com/)
-[饿了么前端博客](https://fe.ele.me/)|[玉伯的博客](https://github.com/lifesinger/blog/issues)
-s|[万神劫的博客](http://chaoskeh.com/archive.html)
-s|[李炎恢的博客](http://www.liyanhui.com/)
-s|[使用NexT主题的博客](https://github.com/iissnan/hexo-theme-next/issues/119)
-s|[晚晴幽草轩](http://www.jeffjade.com/)
-s|[https://github.com/creeperyang/blog](https://github.com/creeperyang/blog)
-s|[王垠的博客](http://www.yinwang.org/)
-s|[张云龙博客](https://github.com/fouber/blog)
-s|[天猪部落阁](https://github.com/atian25/blog)
-
-```
-更新中...
-```
 
 
-
-【收藏-专栏】
-[尤雨溪 - 知乎](https://www.zhihu.com/people/evanyou/)
-
-[黄轶 - 掘金](https://juejin.im/user/586db400a22b9d005695a69d/posts)
-
-[YoungZ - 掘金](https://juejin.im/user/59a7a5a96fb9a02487554b86)
-
-【收藏 - 教程/课程】
-# runoob
-菜鸟教程，虽然不会很深，但是对于快速熟悉了解一门技术，还是有帮助的。
-菜鸟教程，目前包含的课程内容有： [菜鸟教程List](https://m.runoob.com/)
-
-# Node.js
-1、Node.js 包教不包会 by alsotang 课程
-https://github.com/alsotang/node-lessons
-
-2、使用 Express + MongoDB 搭建多人博客
-https://github.com/nswbmw/N-blog
-
-# 二、Node.js API
-- [https://nodejs.org/api/](https://nodejs.org/api/)
-
-# 三、AMD
-- [AMD](https://github.com/amdjs/amdjs-api/wiki/AMD-(%E4%B8%AD%E6%96%87%E7%89%88))
-- [AMD 中的 require()函数](https://github.com/amdjs/amdjs-api/wiki/require-(%E4%B8%AD%E6%96%87%E7%89%88))
-- [Loader Plugins](https://github.com/amdjs/amdjs-api/wiki/Loader-Plugins(%E4%B8%AD%E6%96%87%E7%89%88))
-
-# 四、阮一峰 JS 教程
-- [JavaScript 标准参考教程（alpha）](http://javascript.ruanyifeng.com/)
-
-# 五、阮一峰 webpack 教程
-- [阮一峰 webpack 教程](https://github.com/ruanyf/webpack-demos)
-
-# 微信小应用的入门过程
-- [分享我用cnode社区api做微信小应用的入门过程](https://cnodejs.org/topic/57ea257b3670ca3f44c5beb6)
-
-# 前端资源教程
-- [前端资源教程](https://cnodejs.org/topic/56ef3edd532839c33a99d00e)
-
-# react
-
-[React.js 小书](http://huziketang.com/books/react/)
-【收藏 - 课程/教程 - END】
-
-
-【收藏 - 图片站点】
-
-[500px](https://500px.com/)
-
-[视觉中国](https://www.vcg.com/)
-
-
-【收藏的文章】
-收藏的文章
-
-|s|s|
-|---|---|
-|[没有功能需求设计文档？对不起，拒绝开发！](http://blog.jobbole.com/110645/)|[漫画赏析：Linux 内核到底长啥样](http://blog.jobbole.com/110581/)|
-|[从一个奇怪的错误出发理解 Vue 基本概念](https://zhuanlan.zhihu.com/p/25486761#tipjar)|[样式化加载失败的图片](http://web.jobbole.com/90430/)|
-|[使用Service worker实现加速/离线访问静态blog网站](http://web.jobbole.com/90421/)|[和少妇白洁一起学JavaScript](https://segmentfault.com/a/1190000008449808)|
-|[在 Node.js 中引入模块](http://huziketang.com/blog/posts/detail?postId=58eaf471a58c240ae35bb8e3)|s|
-
-
-【网站&工具】
-[在线代码演示](http://jsbin.com/?html,output)
-
-
-【收藏 - 访谈】
-|s|s|
-|--|--|
-|[阮一峰：为什么写博客？（图灵访谈）](http://www.ituring.com.cn/article/111023)|[vue.js作者谈vue的创作过程](http://www.csdn.net/article/1970-01-01/2825439)|
-|[周爱民：真正的架构师是没有title的（图灵访谈）](http://www.ituring.com.cn/article/120377)|[Vue作者尤雨溪：以匠人的态度不断打磨完善Vue （图灵访谈）](http://www.ituring.com.cn/article/273032)|
-|[朴灵：打破限制，从前端到全栈（图灵访谈）](http://www.ituring.com.cn/article/197773)|[比较详细的采访 Vue 作者尤雨溪(英文)](https://medium.freecodecamp.com/between-the-wires-an-interview-with-vue-js-creator-evan-you-e383cbf57cc4)|
-|[七牛首席架构师李道兵：在开源世界里逼自己成长（图灵访谈）](http://www.ituring.com.cn/article/200305)|[比较详细的采访 Vue 作者尤雨溪(中文)](http://zcfy.cc/article/an-interview-with-vue-js-creator-evan-you-3143.html?t=selection)|
-|[云巴创始人张虎：一个优秀的软件工程师必然是全栈工程师（图灵访谈）](http://www.ituring.com.cn/article/199457)|s|
-|[《CSS 揭秘》作者Lea Verou：我喜欢分享开源的行业文化（图灵访谈）](http://www.ituring.com.cn/article/261344)|s|
-|s|s|
-
-
-【收藏 - 前端面试相关问题】
-
+### 收藏 - 前端面试相关问题
 [https://github.com/h5bp/Front-end-Developer-Interview-Questions](https://github.com/h5bp/Front-end-Developer-Interview-Questions)
 
 [https://github.com/markyun/My-blog/tree/master/Front-end-Developer-Questions](https://github.com/markyun/My-blog/tree/master/Front-end-Developer-Questions)
 
 
 
-
-
-
-
-【一些实战的代码优化小技巧】
-代码优化是一门很深的学问，考验一个人的基本功，内力，经验，以及工作中的思考和总结。如果对这块感兴趣的，可以专门看书学习一下。【列一些专业的书籍】
+### 一些实战的代码优化小技巧
+代码优化是一门很深的学问，考验一个人的基本功，内力，经验，以及工作中的思考和总结。如果对这块感兴趣的，可以专门找一些书学习一下。【列一些专业的书籍】
 
 下面，是我在实战中的一些总结。
 ```
