--- a/docs/base/word-interpretation/a2.md
+++ b/docs/base/word-interpretation/a2.md
@@ -3,11 +3,12 @@
 ### One
 
 |a|aa|aaa|
-|:---------:|:---------|:-----:|
+|:---------:|:---------|:-------:|
 | oss      | Object Storage Server | 对象存储 |
 | cos      | cloud object storage      | 云对象存储（腾讯） |
 | PaaS     | platform-as-a-service      | 平台即服务 |
 | CI\CD    | 持续集成（Continuous Integration）」、「持续交付（Continuous Delivery）」、「持续部署（Continuous Deployment）」 | 因为「持续交付」和「持续部署」的英文缩写是一样的，所以这三件事情缩写成了 CI\CD |
+|内容分发网络（Content Delivery Network，CDN）|
 
 ### Two
 
