deploy by 20221229 at offical_F13 with update

--- a/docs/base/word-interpretation/a2.md
+++ b/docs/base/word-interpretation/a2.md
@@ -1,54 +1,27 @@
 # 英文/缩写释义
 
+<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" src="//music.163.com/outchain/player?type=2&id=436355381&auto=0&height=66"></iframe>
+
 ### One
 
-|a|aa|aaa|
+| a | a-A | AAA |
 |:---------:|:---------|:-------:|
 | oss      | Object Storage Server | 对象存储 |
 | cos      | cloud object storage      | 云对象存储（腾讯） |
 | PaaS     | platform-as-a-service      | 平台即服务 |
 | CI\CD    | 持续集成（Continuous Integration）」、「持续交付（Continuous Delivery）」、「持续部署（Continuous Deployment）」 | 因为「持续交付」和「持续部署」的英文缩写是一样的，所以这三件事情缩写成了 CI\CD |
-|内容分发网络（Content Delivery Network，CDN）|
+| CDN | Content Delivery Network | 内容分发网络 |
+| REPL | Read Eval Print Loop | 交互式解释器 ，类似系统的终端 |
+
 
 ### Two
 
-- Showing 1 changed file with 1 addition and 0 deletions. 【改了一个文件，添加了一行内容，删除了0行内容。】
+- Showing 1 changed file with 1 addition and 0 deletions. 【改了一个文件，添加了一行内容，删除了0行内容】
 
-- Unsynced   没有同步的版本
-- Revert this Commit   抵消这次版本
-- Roll Back to this Commit    回滚到这个版本
-- Synced   同步
-- Collaborators   合作者
-- And converting them into collaborators    把他们变成合作者
-- This pull request can be automatically merged by project collaborators  这个pull request可以被项目的collaborator 自动融合。
-
-REPL(Read Eval Print Loop:交互式解释器) ，类似系统的终端
-
-
-【github中的快捷键】
-- 在issues中就某个问题回复，可以选中要回复的问题，然后按快捷键R
-
-- 在github中，其实是有查找功能的，搜索查找快捷键
-
-
-
-
-### 收藏 - 前端面试相关问题
-[https://github.com/h5bp/Front-end-Developer-Interview-Questions](https://github.com/h5bp/Front-end-Developer-Interview-Questions)
-
-[https://github.com/markyun/My-blog/tree/master/Front-end-Developer-Questions](https://github.com/markyun/My-blog/tree/master/Front-end-Developer-Questions)
-
-
-
-### 一些实战的代码优化小技巧
-代码优化是一门很深的学问，考验一个人的基本功，内力，经验，以及工作中的思考和总结。如果对这块感兴趣的，可以专门找一些书学习一下。【列一些专业的书籍】
-
-下面，是我在实战中的一些总结。
-```
-if(jqXHR.statusText === "Hello" || jqXHR.statusText === "OK" || jqXHR.statusText === "success") {...}
-// 改为
-if(['Hello', 'OK', 'success'].indexOf(jqXHR.statusText) > -1) {...}
-```
-
-
-
+- Unsynced  ->  【没有同步的版本】
+- Revert this Commit  ->  【抵消这次版本】
+- Roll Back to this Commit  ->  【回滚到这个版本】
+- Synced    ->   【同步】
+- Collaborators  ->  【合作者】
+- And converting them into collaborators    ->   【把他们变成合作者】
+- This pull request can be automatically merged by project collaborators    ->  【这个pull request可以被项目的collaborator 自动融合】
