--- a/docs/summary/health/s1.md
+++ b/docs/summary/health/s1.md
@@ -1,4 +1,4 @@
-# A
+# S1
 
 **心梗**
 
@@ -28,5 +28,13 @@
 
 睡眠要保证7-8小时。
 
+**洗脸**
 
+1、干性敏感皮肤及老年人洗脸水温要低于皮肤温度，即要低于35摄氏度，手感温凉；
+
+2、油性皮肤洗脸水温稍微偏热一点，水温比皮肤温度略高，在37摄氏度左右；
+
+3、油性痘痘肌不建议凉水洗脸；
+
+4、此外，每天洗脸两次最佳；
 
