--- a/docs/cognition/a3.md
+++ b/docs/cognition/a3.md
@@ -1,5 +1,7 @@
-# 认知的层次
+# 认知的层次和维度
 
 1、认知水平低的人，他肯定不会善良，因为这种人他闹不清事物到底是对是错，他们又非常固执，实际上他可能追寻的就是客观世界上这些不好的东西，但他固执的认为这些东西是对的，你跟他讲不清的。
 
 2、提升认知层次：不过度共情，甚至不要考虑他人感受；共情会让自己承担过多的情绪负担。
+
+3、
