--- a/docs/other/culture/a10-1.md
+++ b/docs/other/culture/a10-1.md
@@ -7,4 +7,8 @@
 
 3、鲜花烂漫终有时，唯有心不老。
 
+4、什么是结果？想爱了就是结果，就像明知道一朵花会枯萎，但是它还是要绽放；就像我们读书，从来不是为了看结局那几页，因为真正打动你的，就是那些中间能让你哭，让你笑，让你成长的过程，其实感情一模一样，既然遇到了，就好好去体验，在有限的一生的时间里，无限的去爱你想爱的人，别给自己留遗憾。
+
+
+
 
